# amiibot

./: index.html
face_detection/: CMakeLists.txt  package.xml
face_detection/src/: face_publisher.cpp  face_subscriber.cpp
